--- a/TaskMentor/Mentor/templates/core/auth/register.html
+++ b/TaskMentor/Mentor/templates/core/auth/register.html
@@ -31,11 +31,11 @@
   </form>
 
   <hr>
-  <p>
-    Уже есть аккаунт?
-    <a href="{% url 'login' %}{% if role %}?role={{ role }}{% endif %}">
-      Войти
-    </a>
-  </p>
+<!--  <p>-->
+<!--    Уже есть аккаунт?-->
+<!--    <a href="/login/{% if role %}?role={{ role }}{% endif %}">-->
+<!--      Войти-->
+<!--    </a>-->
+<!--  </p>-->
 </div>
 {% endblock %}
