--- a/TaskMentor/static/css/style.css
+++ b/TaskMentor/static/css/style.css
@@ -167,3 +167,10 @@
 .role-card:hover {
     transform: scale(1.05);
 }
+/* ФИКС для модального окна */
+#createTaskModal {
+  z-index: 1060 !important;
+}
+.modal-backdrop {
+  z-index: 1050 !important;
+}
