--- a/TaskMentor/Mentor/templates/core/base.html
+++ b/TaskMentor/Mentor/templates/core/base.html
@@ -13,6 +13,7 @@
     {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    {% block extra_js %}{% endblock %}
+    {% block extra_js %}
+    {% endblock %}
 </body>
 </html>
